products/authentik/templates/proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-proxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  rules:
    - host: hubble.cloud.feddema.dev
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-authentik-embedded-outpost
                port:
                  number: 9000
  tls:
    - hosts:
        - hubble.cloud.feddema.dev
      secretName: hubble-proxy-tls
